# -Scrapping-S-P-Historic-Stock-Price-Data-from-the-Internet-using-yfinance-in-Python-

./: .gitignore  Blackfaces_filtered.ipynb  Optimizing_Euro_Stoxx_50_Investments_A_UCB_Algorithm_Based_Stock_Selection_Strategy_with_Correlation_Driven_Hedging.ipynb  README.md  S&P_500_data_Scrapping_Project.ipynb  pyproject.toml
scripts/: download_sp500_prices.py
src/sp500_historical_prices/: __init__.py  downloader.py
tests/: test_downloader.py
